feat: wire runtime code intelligence into investigation